# ctrlb-decompose

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.cursor/rules/: log-analysis.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  wasm-deploy.yml
benches/: compare_drain3.sh  drain3_baseline.py
docs/: ai-setup.md  integration.md  use-cases.md
examples/: generate_logs.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: clp_no_panic.rs  clp_roundtrip.rs  drain_train.rs  timestamp.rs
src/: anomaly.rs  correlation.rs  label.rs  lib.rs  scoring.rs  stats.rs  types.rs  wasm.rs
src/extraction/: drain3.rs  mod.rs  pipeline.rs
src/extraction/clp/: core.rs  decoding.rs  encoding.rs  mod.rs
src/format/: human.rs  json.rs  llm.rs
tests/: integration.rs
tests/snapshots/: integration__human_output.snap  integration__json_output.snap  integration__llm_output.snap
web/: app.js  index.html
